--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 (已存活1天)中国-4.01MB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
-  - {name: 🇸🇬 新加坡-3.69MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-2.94MB/s(Youtube:不良林), server: 134.195.196.128, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
-  - {name: 🇨🇦 加拿大-2.05MB/s(Youtube:不良林), server: 196.247.59.154, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-3.65MB/s(Youtube:不良林), server: 85.208.108.20, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇬🇧 英国-2.69MB/s(Youtube:不良林), server: vpnu.loungers.cc, port: 56830, type: vmess, uuid: d2e92a19-f50c-426e-cd15-03ece7f4f3b1, alterId: 32, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws/x-ui, ws-headers: {Host: vpnu.loungers.cc}}
+  - {name: 🇦🇺 澳大利亚-2.64MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-2.00MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-476.9KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇹🇭 泰国-2.48MB/s(Youtube:不良林), server: 119.59.116.248, port: 17159, type: trojan, password: PHnvNV7HGp, skip-cert-verify: true}
   - {name: 🇨🇦 加拿大-2.70MB/s(Youtube:不良林), server: 134.195.196.128, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
   - {name: 🇰🇷 韩国-3.87MB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
   - {name: 🇨🇦 加拿大-1.97MB/s(Youtube:不良林), server: 196.247.59.154, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 (已存活1天)中国-4.01MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.69MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.94MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.05MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.65MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.69MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.64MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-476.9KB/s(Youtube:不良林)
+      - 🇹🇭 泰国-2.48MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.70MB/s(Youtube:不良林)
       - 🇰🇷 韩国-3.87MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 (已存活1天)中国-4.01MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.69MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.94MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.05MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.65MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.69MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.64MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-476.9KB/s(Youtube:不良林)
+      - 🇹🇭 泰国-2.48MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.70MB/s(Youtube:不良林)
       - 🇰🇷 韩国-3.87MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 (已存活1天)中国-4.01MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.69MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.94MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.05MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.65MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.69MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.64MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-476.9KB/s(Youtube:不良林)
+      - 🇹🇭 泰国-2.48MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.70MB/s(Youtube:不良林)
       - 🇰🇷 韩国-3.87MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 (已存活1天)中国-4.01MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.69MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.94MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.05MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.65MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.69MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.64MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-476.9KB/s(Youtube:不良林)
+      - 🇹🇭 泰国-2.48MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.70MB/s(Youtube:不良林)
       - 🇰🇷 韩国-3.87MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 (已存活1天)中国-4.01MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.69MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.94MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.05MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.65MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.69MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.64MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-476.9KB/s(Youtube:不良林)
+      - 🇹🇭 泰国-2.48MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.70MB/s(Youtube:不良林)
       - 🇰🇷 韩国-3.87MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 (已存活1天)中国-4.01MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.69MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.94MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.05MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.65MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.69MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.64MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-476.9KB/s(Youtube:不良林)
+      - 🇹🇭 泰国-2.48MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.70MB/s(Youtube:不良林)
       - 🇰🇷 韩国-3.87MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 (已存活1天)中国-4.01MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.69MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.94MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.05MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.65MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.69MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.64MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-476.9KB/s(Youtube:不良林)
+      - 🇹🇭 泰国-2.48MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.70MB/s(Youtube:不良林)
       - 🇰🇷 韩国-3.87MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
