--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-6.29MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-3.69MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-526.2KB/s(Youtube:不良林), server: 51.81.223.32, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.56MB/s(Youtube:不良林), server: fhcamd2.gaox.ml, port: 443, type: trojan, password: dbf9bf9c-2c3f-474a-8031-d4c00666a989, sni: fhcamd2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-2.25MB/s(Youtube:不良林), server: 134.195.196.128, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇨🇦 加拿大-2.00MB/s(Youtube:不良林), server: 196.247.59.154, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇨🇦 加拿大-2.22MB/s(Youtube:不良林), server: 196.247.59.154, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-3.55MB/s(Youtube:不良林), server: 85.208.108.93, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇸🇬 新加坡-3.68MB/s(Youtube:不良林), server: bai-piao-wang-zhe.us.567568.ml, port: 12337, type: trojan, password: df8ebf95-bd60-4f7e-a505-fe8db5ba3342, sni: bai-piao-wang-zhe.us.567568.ml, skip-cert-verify: true}
   - {name: 🇨🇦 加拿大-2.90MB/s(Youtube:不良林), server: 134.195.196.128, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
   - {name: 🇨🇦 加拿大-2.87MB/s(Youtube:不良林), server: 134.195.196.128, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇨🇦 加拿大-2.90MB/s(Youtube:不良林) 2, server: 134.195.196.128, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-6.29MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.69MB/s(Youtube:不良林)
-      - 🇺🇸 美国-526.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.56MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.25MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.00MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.22MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.55MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.68MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.90MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.87MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.90MB/s(Youtube:不良林) 2
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-6.29MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.69MB/s(Youtube:不良林)
-      - 🇺🇸 美国-526.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.56MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.25MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.00MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.22MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.55MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.68MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.90MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.87MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.90MB/s(Youtube:不良林) 2
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-6.29MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.69MB/s(Youtube:不良林)
-      - 🇺🇸 美国-526.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.56MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.25MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.00MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.22MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.55MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.68MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.90MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.87MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.90MB/s(Youtube:不良林) 2
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-6.29MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.69MB/s(Youtube:不良林)
-      - 🇺🇸 美国-526.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.56MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.25MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.00MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.22MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.55MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.68MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.90MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.87MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.90MB/s(Youtube:不良林) 2
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-6.29MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.69MB/s(Youtube:不良林)
-      - 🇺🇸 美国-526.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.56MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.25MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.00MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.22MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.55MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.68MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.90MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.87MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.90MB/s(Youtube:不良林) 2
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-6.29MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.69MB/s(Youtube:不良林)
-      - 🇺🇸 美国-526.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.56MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.25MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.00MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.22MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.55MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.68MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.90MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.87MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.90MB/s(Youtube:不良林) 2
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-6.29MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.69MB/s(Youtube:不良林)
-      - 🇺🇸 美国-526.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.56MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.25MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.00MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.22MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.55MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.68MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.90MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.87MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.90MB/s(Youtube:不良林) 2
